# Robotics_proyect_2024_2s

./: .gitignore  INFORME.md  LICENSE  readme.md
Figuras/: diagramaDH_pincher.pdn
install/: local_setup.sh  setup.sh
install/local_controller/lib/local_controller/: local_controller
install/local_controller/share/local_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/local_station/share/local_station/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phantom_controller/lib/phantom_controller/: phantom_controller
install/phantom_controller/share/phantom_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
local_station/: setup.cfg  setup.py
log/: latest_build
src/local_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/local_controller/launch/: bringup_launch.py
src/local_controller/local_controller/: RobotInterface.py
src/phantom_controller/: package.xml  setup.cfg  setup.py
src/phantom_controller/config/: config.json
src/phantom_controller/phantom_controller/: KinematicCalculator.py  PhantomController.py  PhantomController2.py
src/phantom_coppelia/launch/: bringup_launch.py
src/phantom_kinematics/: package.xml  setup.cfg  setup.py
src/phantom_kinematics/phantom_kinematics/: KinematicCalculator.py  PhantomKinematics.py
