<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_controller</name>
  <version>1.0.0</version>
  <description>Este paquete permite leer la información de un joystic de PS5 y envía datos de movimiento, modo y status. Tiene una GUI para mostrar información del robot.</description>
  <maintainer email="lucarmonaa@unal.edu.co">Luis Enrique Carmona</maintainer>
  <license>MIT license</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>PyQt5</depend>
  <depend>pygame</depend>
  <depend>cv_bridge</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>
  <!-- <depend>opencv-python</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
