[develop]
script_dir=$base/lib/local_controller
[install]
install_scripts=$base/lib/local_controller
[metadata]
name = local_controller
version = 0.0.1
description = Controlador local para el robot
author = Tu Nombre
license = MIT
[options]
packages = find:
install_requires =
    setuptools
    launch
    launch_ros
